Update index.html 3 final
correção de bugs

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             bottom: 0;
         }
 
-        @media (max-width: 600px) {
+        @media (max-width:800px) {
             nav {
                 flex-direction: column;
             }
-
+           header img{ max-height:10 ;}
             nav a {
                 text-align: left;
                 padding: 10px;
